# MyGram/docs/swagger.yaml
@@ -6,19 +6,11 @@ definitions:
       social_media_url:
         type: string
     type: object
-  controllers.ErrorResponse:
-    properties:
-      error:
-        type: string
-      message:
-        type: string
+  controllers.DeleteSocial:
     type: object
-  controllers.ErrorResponse2:
-    properties:
-      error:
-        type: string
-      message:
-        type: string
+  controllers.GetAllSocial:
+    type: object
+  controllers.GetOneSocial:
     type: object
   controllers.LoginRequest:
     properties:
@@ -41,6 +33,20 @@ definitions:
   controllers.SuccessResponse:
     properties:
       token:
+        type: string
+    type: object
+  controllers.UpdateSocial:
+    properties:
+      name:
+        type: string
+      social_media_url:
+        type: string
+    type: object
+  helpers.ErrorResponse:
+    properties:
+      error:
+        type: string
+      message:
         type: string
     type: object
   models.SocialMedia:
@@ -78,12 +84,52 @@ definitions:
 info:
   contact: {}
 paths:
+  /socialmedia:
+    get:
+      consumes:
+      - application/json
+      description: Get All Social Media Which Has Been Made
+      parameters:
+      - description: Bearer {access_token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: The Social Media Has Been Obtained
+        in: body
+        name: socialmedia
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.GetAllSocial'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SocialMedia'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+      summary: Get All Social Media
+      tags:
+      - Social Media
   /socialmedia/:
     post:
       consumes:
       - application/json
       description: CreateSocialMedia a new socialmedia with the given information
       parameters:
+      - description: Bearer {access_token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: The social media to create
         in: body
         name: socialmedia
@@ -100,14 +146,117 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/controllers.ErrorResponse2'
+            $ref: '#/definitions/helpers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/controllers.ErrorResponse2'
-      summary: CreateSocialMedia a new socialmedia
+            $ref: '#/definitions/helpers.ErrorResponse'
+      summary: Create a new Social Media
       tags:
-      - socialmedia
+      - Social Media
+  /socialmedia/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete Social Media by ID Social Media
+      parameters:
+      - description: Bearer {access_token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: The Social Media Has Been Deleted
+        in: body
+        name: socialmedia
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.DeleteSocial'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SocialMedia'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+      summary: Delete Social Media
+      tags:
+      - Social Media
+    get:
+      consumes:
+      - application/json
+      description: Get One Social Media by ID Social Media
+      parameters:
+      - description: Bearer {access_token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: The Social Media Has Been Obtained
+        in: body
+        name: socialmedia
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.GetOneSocial'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SocialMedia'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+      summary: Get One Social Media
+      tags:
+      - Social Media
+    put:
+      consumes:
+      - application/json
+      description: Update Social Media by ID Social Media
+      parameters:
+      - description: Bearer {access_token}
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: The Social Media Has Been Updated
+        in: body
+        name: socialmedia
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.UpdateSocial'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SocialMedia'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+      summary: Update Social Media
+      tags:
+      - Social Media
   /user/login:
     post:
       consumes:
@@ -131,11 +280,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
+            $ref: '#/definitions/helpers.ErrorResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
+            $ref: '#/definitions/helpers.ErrorResponse'
       summary: Login a user
       tags:
       - user
@@ -161,11 +310,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
+            $ref: '#/definitions/helpers.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
+            $ref: '#/definitions/helpers.ErrorResponse'
       summary: Register a new user
       tags:
       - user
